-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.3.0 RC1
-
None
-
-
50eaeab378ebef60305d47b2b0f2f5eb39641338
When using a TextEdit item with Qt Quick, there are a large number of warnings of the type "QMetaObject::invokeMethod: No such method QQuickTextEdit::inputMethodQuery(Qt::InputMethodQuery,QVariant)"
This is because QQuickTextEdit is missing the function:
Q_INVOKABLE QVariant inputMethodQuery(Qt::InputMethodQuery query, QVariant argument) const;
There is fallback code to handle the lack of this function, so this is not a serious problem, but the warning is likely to create confusion in reporting other issues.
| For Gerrit Dashboard: QTBUG-38824 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 84859,2 | Android: Add support for new input method query API | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |