Android: Add support for new input method query API

Change 93fd268d implemented the new API, but missed the final
piece that actually made use of it.

Task-number: QTBUG-38824
Change-Id: Iea28f2cbb8c6d749d781dcf7437552597977f9ac
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>